# web-scraper-agent-openai

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/agent/: agent.py
src/config/: settings.py
src/tools/: company_lookup.py  company_lookup_bak.py  dataforthai_claw.py  dataforthai_crawl.py  dataforthai_playwright.py
tests/: test_api.py  test_claw.py  test_crawl.py  test_lookup.py  test_taxid.py
